hphp/test/slow/readonly/setm.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Cannot store readonly value in a non-readonly property c of class Foo.' in %s/setm.php:14
%A
